Wed Feb 21 09:14:04 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval_load.c (rb_require_safe): should restore safe level.

Tue Feb 20 21:19:29 2007  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (installed_code_page_proc, 
	  ole_variant2val): small refactoring.

Tue Feb 20 15:11:42 2007  Koichi Sasada  <ko1@atdot.net>

	* eval.c, vm.c, yarvcore.h: move definition of rb_call_super() to
	  vm.c from eval.c.  change th_call_super() to static function.

Tue Feb 20 15:08:25 2007  Koichi Sasada  <ko1@atdot.net>

	* test/io/nonblock/test_flush.rb: YARV doesn't raise any errors if
	  another thread close IO object which current thread is blocking with.

Tue Feb 20 15:03:29 2007  Koichi Sasada  <ko1@atdot.net>

	* thread.c (do_select, rb_thread_wait_fd_rw): raise sys error if
	  errno is not 0 and EBADF.

Mon Feb 19 22:15:31 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_REPLACE_TYPE): cache convertible type info.

	* intern.h (rb_detach_process): use rb_pid_t instead of pid_t.

	* ruby.h (PIDT2NUM, NUM2PIDT, UIDT2NUM, NUM2UIDT, GIDT2NUM, NUM2GIDT):
	  defaulted to conversion using long.

Mon Feb 19 17:14:28 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/socket/socket.c (unix_peeraddr): wrong syscall name in error
	  message for #peeraddr. a patch from Sam Roberts
	  <sroberts at uniserve.com>.  [ruby-core:10366]

Sun Feb 18 22:56:07 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/etc/etc.c (etc_getgrgid): missed to replace a macro.

Sun Feb 18 19:33:00 2007  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date/format.rb: updated based on date2 4.0.3.

Sun Feb 18 13:11:51 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (pid_t, uid_t, gid_t): check if defined.

	* intern.h, process.c, rubyio.h, ext/etc/etc.c, ext/pty/pty.c: use
	  rb_{pid,uid,gid}_t instead of plain int.  [ruby-dev:30376]

	* ext/etc/extconf.rb (PIDT2NUM, NUM2PIDT, UIDT2NUM, NUM2UIDT, GIDT2NUM,
	  NUM2GIDT): moved to configure.in.
